cambios para la reentrega

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <a mat-button routerLink="formulario-socios">SER SOCIO</a>
   <a mat-button routerLink="formacion/cards">CURSOS</a>
   <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
-  <a mat-button routerLink="formacion/tabla-de-cursos">ORGANIZACION</a>
+  <a mat-button routerLink="organizacion">ORGANIZACION</a>
   <a mat-button routerLink="footer">CONTACTO</a>
   <span class="example-spacer"></span>
 <ng-container>
