--- a/src/app/components/organizacion/components/organizacion.component.html
+++ b/src/app/components/organizacion/components/organizacion.component.html
@@ -1,3 +1,3 @@
-<app-section-cursos></app-section-cursos>
-<app-socios></app-socios>
+<app-section-cursos routerLink="organizacion"></app-section-cursos>
+<app-socios routerLink="organizacion"></app-socios>
 
