agregando ultimos cambios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,11 @@
   <span class="example-spacer"></span>
   <a mat-button routerLink="inicio">INICIO</a>
   <a mat-button routerLink="noticias">NOTICIAS</a>
-  <a mat-button routerLink="formulario-socios">SER SOCIO</a>
+  <a mat-button routerLink="formulario-socio-nuevo">SER SOCIO</a>
   <a mat-button routerLink="formacion/cards">CURSOS</a>
   <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
-  <a mat-button routerLink="organizacion">ORGANIZACION</a>
+  <a mat-button routerLink="formacion/tabla-de-cursos">ORGANIZACION</a>
+  <a mat-button routerLink="tabla-de-socios">INTEGRANTES</a>
   <a mat-button routerLink="footer">CONTACTO</a>
   <span class="example-spacer"></span>
 <ng-container>
