--- a/src/app/socios/components/editar-socios/editar-socios.component.html
+++ b/src/app/socios/components/editar-socios/editar-socios.component.html
@@ -6,28 +6,29 @@
 
     <div class="col-md-3">
       <label  for="inputSocio" class="form-label">Socio</label>
-      <input  matInput formControlName="nombre" id="inputSocio" title="label">
+      <input  matInput formControlName="nombre" type="text" class="form-control" id="inputSocio" title="label">
     </div>
 
     <div class="col-md-3">
       <label  for="inputDireccion" class="form-label">Direccion</label>
-      <input matInput formControlName="direccion"  title="label" id="inputDireccion">
+      <input matInput formControlName="direccion" type="text" class="form-control" title="label" id="inputDireccion">
     </div>
 
     <div class="col-md-3">
       <label  for="inputDni" class="form-label">Dni</label>
-      <input matInput formControlName="dni"  id="inputDni" title="label">
+      <input matInput formControlName="dni" type="text" class="form-control" id="inputDni" title="label">
     </div>
 
     <div class="col-md-3">
       <label  for="inputPais" class="form-label">Pais</label>
-      <input matInput formControlName="pais"  id="inputPais" title="label">
+      <input matInput formControlName="pais" type="text" class="form-control" id="inputPais" title="label">
     </div>
 
 
     <div class="col-md-3">
       <label  for="inputCiudad" class="form-label">Ciudad</label>
-      <input matInput formControlName="ciudad"  id="inputCiudad" title="label">
+      <input matInput formControlName="ciudad" type="text" class="form-control" id="inputCiudad" title="label">
+
     </div>
 
 
@@ -47,26 +48,13 @@
     </div>
 
     <div class="col-md-3">
-      <label  for="inputContrasena" class="form-label"> Contraseña</label>
-      <input matInput formControlName="contrasena" type="text" class="form-control" id="inputContrasena" title="label">
-    </div>
-    <div class="col-md-3">
       <label  for="inputProfesion" class="form-label"> Profesion</label>
       <input matInput formControlName="profesion" type="text" class="form-control" id="inputProfesion" title="label">
-    </div>
-    <div class="col-md-3">
-      <label  for="inputCargo" class="form-label"> Cargo</label>
-      <input matInput formControlName="cargo" type="text" class="form-control" id="inputCargo" title="label">
-    </div>
-    <div class="col-md-3">
-      <label  for="inputPuesto" class="form-label"> Puesto</label>
-      <input matInput formControlName="puesto" type="text" class="form-control" id="inputPuesto" title="label">
     </div>
     <div class="col-md-3">
       <label  for="inputMatricula" class="form-label"> Matricula</label>
       <input matInput formControlName="matricula" type="number" class="form-control" id="inputMatricula" title="label">
     </div>
-
   </div>
   </form>
 
