--- a/src/app/socios/components/form-socios/form-socios.component.css
+++ b/src/app/socios/components/form-socios/form-socios.component.css
@@ -1,4 +1,4 @@
-/* .container-form {width: 40%;
+.container-form {width: 40%;
 margin-left: auto;
 margin-right: auto;
 margin-top: 100px;
@@ -27,4 +27,4 @@ font-size: 0.7em;}
 .mat-mdc-raised-button
  {background-color: orange !important}
 
- */
+
