--- a/src/app/socios/components/tabla/socios.component.html
+++ b/src/app/socios/components/tabla/socios.component.html
@@ -6,7 +6,7 @@
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="nombre">
     <th mat-header-cell *matHeaderCellDef>Socio</th>
-    <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
+    <td mat-cell *matCellDef="let element">{{element.nombre +' '+ element.apellido}}</td>
   </ng-container>
 
   <ng-container matColumnDef="direccion">
