--- a/src/app/socios/components/tabla/socios.component.html
+++ b/src/app/socios/components/tabla/socios.component.html
@@ -53,6 +53,9 @@
       <button mat-icon-button (click)="deleteSocio(element)">
         <mat-icon> delete </mat-icon>
       </button>
+      <button mat-icon-button (click)="openDialog(element)">
+        <mat-icon>file_open </mat-icon>
+      </button>
     </td>
   </ng-container>
 
