--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,39 @@
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 * {
   font-family: 'Assistant', sans-serif;
 }
 
-.mat-toolbar {
-  background-color: #002653;
+.navbar {
+  background-color: #002653; 
+}
+
+
+
+.navbar .navbar-brand,
+.navbar .navbar-nav .nav-link {
+  color: white; 
+}
+
+
+
+.navbar .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.5); 
+}
+
+.navbar .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.boton-sesion {
+  font-size: 1.2em;
+  margin: 30px;
+  color: white;
+  text-decoration: none;
 }
 
 .example-spacer {
   flex: 1 1 auto;
 }
 
-.logo {
-  width: 20px;
-}
-
-.example-icon {
-  border: none;
-  background-color: transparent;
-}
-
-.boton-sesion {
-  font-size: 0.6em;
-  margin: 30px;
-}
