--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,53 @@
-<mat-toolbar class="toolbar">
-  <span class="example-spacer"></span>
-  <a mat-button routerLink="inicio">INICIO</a>
-  <a mat-button routerLink="noticias">NOTICIAS</a>
-  <a mat-button routerLink="formulario-socio-nuevo">SER SOCIO</a>
-  <a mat-button routerLink="formacion/cards">CURSOS</a>
-  <a mat-button routerLink="formacion/enseña-con-nosotros">FORMACION</a>
-  <a mat-button routerLink="formacion/tabla-de-cursos">ORGANIZACION</a>
-  <a mat-button routerLink="tabla-de-socios">INTEGRANTES</a>
-  <a mat-button routerLink="footer">CONTACTO</a>
-  <span class="example-spacer"></span>
-<ng-container>
-  <a *ngIf="!(sesionActiva$ | async)" mat-button class="boton-sesion" routerLink="inicio-sesion">Iniciar Sesion</a>
-  <a *ngIf= "sesionActiva$ | async" mat-button class="boton-sesion" (click)="cerrarSesion()" >Cerrar Sesion</a>
-</ng-container>
-  <button matbutton class="example-icon" (click)="irInicio()" aria-label="Example icon-button with share icon"><img class="logo" src="../assets/images/logo.png" alt="inicio" title="inicio"> </button>
-</mat-toolbar>
+
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="../assets/images/logo.png" alt="Logo" style="width: 20px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="inicio">INICIO</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="noticias" class="nav-link">NOTICIAS</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="formulario-socio-nuevo" class="nav-link">SER SOCIO</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="formacion/cards" class="nav-link">CURSOS</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="formacion/enseña-con-nosotros" class="nav-link">FORMACION</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="formacion/tabla-de-cursos" class="nav-link">ORGANIZACION</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="tabla-de-socios" class="nav-link">INTEGRANTES</a>
+        </li>
+        <li class="nav-item">
+          <a mat-button routerLink="footer" class="nav-link">CONTACTO</a>
+        </li>
+
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li *ngIf="!(sesionActiva$ | async)" class="nav-item">
+          <a class="nav-link boton-sesion" routerLink="inicio-sesion" class="boton-sesion">Iniciar Sesión</a>
+        </li>
+        <li *ngIf="sesionActiva$ | async" class="nav-item">
+          <a class="nav-link boton-sesion" (click)="cerrarSesion()">Cerrar Sesión</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
 <router-outlet></router-outlet>
 
 
