--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -25,3 +25,16 @@ flex-direction: column;}
   align-items: center;
   font-family: 'Assistant', sans-serif;
 }
+
+@media (min-width: 481px) and ( max-width: 850px) {}
+
+@media (max-width: 480px) {
+  .container-footer{width: 100%;
+    margin: 10px 0;}
+
+    .container-img{width: 90%;
+      margin: auto;}
+
+      .container-img img{width: 150px;
+}
+} 
