--- a/src/app/components/pagenotfound/pagenotfound.component.css
+++ b/src/app/components/pagenotfound/pagenotfound.component.css
@@ -1,3 +1,13 @@
 img {width: 100%;
 margin: auto ;
 }
+
+@media (min-width: 481px) and ( max-width: 850px) {
+   img { object-fit:fill;
+  }
+}
+  @media (max-width: 480px) {
+
+    img { width: 100%;
+    }
+  }
