--- a/src/app/components/section-alumnos/section-alumnos.component.css
+++ b/src/app/components/section-alumnos/section-alumnos.component.css
@@ -18,3 +18,12 @@ list-style: none;
 #placeholder-alumno span { color: #ffc107;
 font-size: 0.6em;
 padding: 5px;}
+
+@media (min-width: 481px) and ( max-width: 850px) {
+
+}
+
+@media (max-width: 480px) {
+    .section-alumnos
+{width: 100%;}
+}
